# gsim-rs

./: Cargo.toml  README.md  cube.gcode  cuboid.gcode  gcode.nc  hello.txt  program.gcod  program.gcode  program.nc  uniquegcodefile
src/: '  ]  app.rs  config.rs  describe.rs  error.rs  geometry.rs  gui.rs  interpreter.rs  lexer.rs  lib.rs  machine.rs  main.rs  parser.rs  shader.wgsl  source.rs  tui.rs  ui.rs  verbose.rs
src/interpreter/: mod.rs
src/machine/: mod.rs
src/parser/: lexer.rs  mod.rs  parser.rs
src/source/: mod.rs
tests/: tests.rs
